RESOLVED FIXED301981
[Site Isolation] Text in cross-site iframe isn't translated if frame is added after user translates page
https://bugs.webkit.org/show_bug.cgi?id=301981
Summary [Site Isolation] Text in cross-site iframe isn't translated if frame is added...
rupin
Reported 2025-11-04 18:53:40 PST
[Site Isolation] Text in cross-site iframe isn't translated if frame is added after user translates page
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-04 18:53:45 PST
rupin
Comment 2 2025-11-04 19:29:38 PST
EWS
Comment 3 2025-11-05 22:05:16 PST
Committed 302630@main (a295ea495b3b): <https://commits.webkit.org/302630@main> Reviewed commits have been landed. Closing PR #53434 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.